--- a/meu portfolio/index.html
+++ b/meu portfolio/index.html
@@ -257,7 +257,7 @@
     <section class="contact" id="contacts">
       <h2 class="heading">Meu <span>Contato</span></h2>
 
-      <form name="contato" data-netlify="true" netlify>
+      <form name="contato" data-netlify="true">
         <div class="input-group">
           <div class="input-box">
             <input
@@ -290,7 +290,7 @@
           <input type="submit" value="Enviar Mensagem" class="btn" />
         </div>
         <input type="hidden" name="form-name" value="contato" />
-        <input type="hidden" name="_next" value="/obrigado.html" />
+        <input type="hidden" name="_next" value="" />
       </form>
     </section>
 
