--- a/meu portfolio/index.html
+++ b/meu portfolio/index.html
@@ -48,14 +48,16 @@
         </p>
 
         <div class="social-icons">
-          <a href="#"><i class="bx bxl-linkedin"></i></a>
-          <a href="#"><i class="bx bxl-github"></i></a>
-          <a href="#"><i class="bx bxl-instagram-alt"></i></a>
-          <a href="#"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.linkedin.com/in/luizfernando18"
+            ><i class="bx bxl-linkedin"></i
+          ></a>
+          <a href="https://github.com/Luiz2312"
+            ><i class="bx bxl-github"></i
+          ></a>
         </div>
 
         <div class="btn-group">
-          <a href="https://wa.me/5518996887082" class="btn">Contratar</a>
+          <a href="https://wa.me/5518996334633" class="btn">Contratar</a>
           <a href="#contacts" class="btn">Contato</a>
         </div>
       </div>
